feat: Set up initial Hytale plugin template with local dependencies, Java 21, and example plugin components.

--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,12 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'com.hypixel.hytale:Server:2026.01.24-6e2d4fc36'
+    compileOnly fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(25)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
